Fix a problem in createCanonicalUUIDString that causes the last digit missing on Linux. https://bugs.webkit.org/show_bug.cgi?id=45412

Reviewed by Darin Adler.

WebCore:

This is caused by not including the final null character into the count
that is provided to fgets.

This is covered by the existing test: send-form-data-with-sliced-file.html.

* platform/UUID.cpp:
(WebCore::createCanonicalUUIDString):

LayoutTests:

Remove the test that is now passing on Linux for chromium.

* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/57766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67017 268f45cc-cd09-0410-ab3c-d52691b4dbfc